@@ -26,4 +26,5 @@
  * @author GoldenKevin
  */
 
+portal.playSoundEffect();
 player.changeMap(120010000, "nt01");
